Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33660

ALTER TABLE ... AUTO_INCREMENT = NN; should return a Warning if it can not use the provided value

    XMLWordPrintable

Details

    • Q2/2026 Server Maintenance

    Description

      The syntax ALTER TABLE ... AUTO_INCREMENT = NN can assign a new value to the auto_increment table option, but the assigned value can not be lower than current MAX() value within the column. This is not explained in the KB.
      Such ALTER always returns without any error and without warning which can be misleading. There should be some warning like:
      "Can not set AUTO_INCREMENT to NN which is lower than current max value of XX"
      or at least:
      "Can not set AUTO_INCREMENT lower than current values within the table"

      Attachments

        Activity

          People

            gkodinov Georgi Kodinov
            salle Alexander Keremidarski
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.