MDEV-33660: warns the user if they try to set auto_increment <= max_value